[package]
name = "contract"
version = "0.1.0"
authors = ["Ahmad Muzakkir <ah.muzakkir@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
smart-contract = "0.1.2"
smart-contract-macros = "0.1.0"
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"